# raves_metadata

./: .gitignore  Cargo.toml  DEPENDENCIES.md  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
raves_iptc_types/: Cargo.toml  build.rs
raves_metadata/: CHANGELOG.typ  Cargo.toml
raves_metadata/assets/: LICENSE.md
raves_metadata/scripts/: png_chunk_helpers.rs
raves_metadata/src/: error.rs  lib.rs  magic_number.rs
raves_metadata/src/exif/: error.rs  ifd.rs  mod.rs  value.rs
raves_metadata/src/iptc/: error.rs  iptc4xmp.rs  mod.rs
raves_metadata/src/providers/: avif.rs  gif.rs  heic.rs  mod.rs  mov.rs  mp4.rs  png.rs
raves_metadata/src/providers/gif/: block.rs  error.rs  mod.rs
raves_metadata/src/providers/jpeg/: error.rs  mod.rs  parse.rs
raves_metadata/src/providers/shared/: mod.rs
raves_metadata/src/providers/shared/bmff/: box_header.rs  ftyp.rs  mod.rs  search.rs
raves_metadata/src/providers/shared/bmff/heif/: iinf.rs  iloc.rs  mod.rs  pitm.rs  search.rs
raves_metadata/src/providers/webp/: chunk.rs  error.rs  header.rs  mod.rs
raves_metadata/src/util/: xmp.rs
raves_metadata/src/xmp/: error.rs  heuristics.rs  iptc4xmp.rs  mod.rs
raves_metadata/src/xmp/value/: arrays.rs  mod.rs  prims.rs  structs.rs  unions.rs
raves_metadata/tests/: magic_number.rs  xmp.rs  xmp_struct_parsing.rs
raves_metadata_types/: CHANGELOG.typ  Cargo.toml  build.rs  iptc-pmd-techreference_2024.1.yml
raves_metadata_types/scripts/: README.md  generate_iptc_module.rs
raves_metadata_types/src/: iptc.rs  lib.rs
raves_metadata_types/src/exif/: ifd.rs  mod.rs  parse_table.rs  primitives.rs  tags.rs
raves_metadata_types/src/xmp/: mod.rs  parse_table.rs  parse_types.rs  types.rs
raves_metadata_types/src/xmp_parse_table/: mod.rs  types.rs
src/: error.rs  lib.rs
src/providers/: bmff.rs  mod.rs
src/util/: mod.rs
