[workspace]
members = ["raves_metadata", "raves_metadata_types"]
resolver = "3"

[workspace.package]
# please add your name here!
authors = ["Barrett Ray"]
edition = "2024"
homepage = "https://github.com/raves-project/raves_metadata"
repository = "https://github.com/raves-project/raves_metadata"
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"
