[package]
name = "raves_metadata"
description = "A library to parse metadata from media files"
version = "0.0.1"
readme = "../README.md"

# avoid publishing test assets or the tests themselves
exclude = ["assets/", "tests/", "scripts/"]

# derive some props from the workspace
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4.27"
parking_lot = "0.12.4"
raves_metadata_types = { version = "0.0.1", path = "../raves_metadata_types" }
winnow = "0.7.11"


# this is a soft fork of the `xmltree` crate.
#
# it provides a fix for the element attributes parsing, where, in the original
# crate, the attributes lose their namespace when parsed.
#
# this is a temporary solution until the original crate has fixes merged.
#
# for more info, see:
# https://github.com/eminence/xmltree-rs/issues/13
#
# also, the branch listed below is available here:
# https://github.com/Heinenen/xmltree-rs/tree/ns-attributes
xmltree = { package = "raves_xmltree", version = "0.11.0" }

[dev-dependencies]
env_logger = { version = "0.11.8", default-features = false }
